...
                        Spacer()

                        HStack {
                            Spacer()
                            tabButton(index: 0, imageName: "home")
                            Spacer()
                            tabButton(index: 1, imageName: "profile")
                            Spacer()
                            tabButton(index: 2, imageName: "friends")
                            Spacer()
                            tabButton(index: 3, imageName: "leaderboard")
                            Spacer()
                            tabButton(index: 4, imageName: "setting")
...
