...
    
    var localizedStrings: [String: [String: String]] = [
        "EN": [
               "Play Offline": "Play Offline",
               "Enter your username": "Enter your username",
               "Copied to clipboard!": "Copied to clipboard!",
               "Start": "Start",
               "Select Your Profile Picture": "Select Your Profile Picture",
               "Settings": "Settings",
               "Audio Level": "Audio Level",
               "Light mode": "Light mode",
               "Dark mode": "Dark mode",
               "Change Theme": "Change Theme",
...
